[metadata]
name = GP
version = attr: __version__
url = https://github.com/yucho147/GP
author = Hirotaka Kato, Naofumi Emoto and Yuya Kaneta
license = LICENSE
description = GP: GPyTorchを用いたガウス過程の簡単利用モジュール
long_description = GP: README.org

[option]
install_requires =
  gpytorch
  matplotlib
  numpy
  torch
  torchvision
  importlib; python_version == "3.7.5"
# zip_safe = False
# packages = find:
# package_dir = find: 
