[metadata]
name = python_easy_GP
version = attr: gp.__version__
url = https://github.com/yucho147/GP
author = Hirotaka Kato, Naofumi Emoto and Yuya Kaneta
license = LICENSE
description = GP: GPyTorchを用いたガウス過程の簡単利用モジュール
long_description = GP: README.org

[option]
packages = gp
install_requires =
  gpytorch
  numpy
python_requires = >=3.6.10
extras_require =		#テスト関係
  sphinx
  sphinx_rtd_theme
zip_safe = False
