[metadata]
name = python_easy_GP
version = attr: gp.__version__
url = https://github.com/yucho147/GP
author = Hirotaka Kato, Naofumi Emoto and Yuya Kaneta
license = MIT
description = GPyTorchを用いたガウス過程の簡単利用モジュール
long_description = file: README.org
keywards = gpytorch, pytorch, gaussian-process
classifiers =
  Development Status :: 3 - Alpha
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3.6
  Topic :: Scientific/Engineering :: Artificial Intelligence

[option]
packages = gp
install_requires =
  gpytorch
  matplotlib
  numpy
  pyro-ppl
python_requires = >=3.6
zip_safe = False

[options.extras_require]
dev =
  twine
  wheel
docs =
  sphinx
  sphinx_rtd_theme

[bdist_wheel]
universal = 1

[pep8]
max-line-length = 120

[flake8]
max-line-length = 120
ignore = E203, F403, F405, E731, W503, W605
exclude =
  build, examples

[build_sphinx]
all-files = 1
source-dir = docs/source
build-dir = docs/build
warning-is-error = 1
